k8s/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: app
  labels:
    app: backend
    tier: backend
spec:
  type: ClusterIP
  selector:
    app: backend
    
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  sessionAffinity: None
